<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dialog_padding"
    tools:context="com.mad.whosetreat.dialog.NewGroupDialogueFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="6">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newPersonNameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:hint="@string/name"
                android:inputType="textCapSentences" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/newPersonNameTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:visibility="gone" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newPersonContactEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:hint="@string/contact"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/confirmNewPersonBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorAccentTrans"
            android:imeOptions="actionSend"
            android:text="@string/done"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</FrameLayout>
