<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|center_horizontal"
    android:gravity="center_vertical"
    tools:context="com.mad.whosetreat.activityFragments.WhereToGoFragment">

    <RelativeLayout
        android:id="@+id/ranShopResultLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/ranShopIv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:elevation="20dp"
            android:minHeight="200dp"
            android:minWidth="70dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_title" />

        <TextView
            android:id="@+id/shopMsgTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ranShopIv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/shop_result_string_1"
            android:textAlignment="center"
            android:textSize="25dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/randShopTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/shopMsgTv"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:textAlignment="center"
            android:textSize="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/randShopTv"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/treatShopBtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorPrimaryDarkTrans"
                android:padding="@dimen/ranShopItemPadding"
                android:text="@string/treat"
                android:textAlignment="center" />

            <Button
                android:id="@+id/confShopBtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorPrimaryDarkTrans"
                android:padding="@dimen/ranShopItemPadding"
                android:text="@string/detail"
                android:textAlignment="center" />


        </LinearLayout>



    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ranShopProgressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/ranShopItemPadding"
        android:visibility="gone">

        <TextView
            android:id="@+id/ranShopProgressMsgTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/ranShopItemPadding"
            android:text="@string/rand_shop_progress_msg"
            android:textAlignment="center"
            android:textSize="@dimen/ran_num_pb_text" />

        <ProgressBar
            android:id="@+id/ranShopPb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:padding="@dimen/ranShopItemPadding" />

    </LinearLayout>

</RelativeLayout>
