<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_group_dialog_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dialog_padding"
    tools:context="com.mad.whosetreat.dialog.NewGroupDialogueFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newGroupNameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_groups_name"
                android:inputType="textCapSentences"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/new_group_member_container"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="10dp"
                android:text="Members"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/random_selection"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/random_info_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/ic_question" />


            </LinearLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/random_state_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/off"
                    android:layout_marginRight="10dp"
                    android:textSize="18sp"
                    app:layout_constraintRight_toLeftOf="@+id/random_switch"/>

                <Switch
                    android:id="@+id/random_switch"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textAlignment="center" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <Button
            android:id="@+id/confirmNewGroupBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/done"
            android:imeOptions="actionSend"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</FrameLayout>
